# JUB_Operating-Systems

./: README.md
Assignment_02/: coins.c  makefile
Assignment_03/: runner.c
Assignment_05/: CMakeLists.txt  guessing_game.c
Assignment_1/: scat.c  watch.c
